2016-10-11  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* ptybuffer.c (daemonloop): Correcting end loop condition, now
	ptybuffer terminates when there are no more sockets.
	(sock_process): correcting close condition.  Close main socket if
	there are no other sockets.  This means, as long as some socket
	hangs, you can open new sockets.

2016-08-28  Valentin Hilbig  <tino@medusa.03.softkill.org>

	* ptybuffer.c (main): Bugfix: Stdin of the child was accidentally
	closed when using -d.  This changes the child interface a bit,
	so minor version needs an increment (even there is no new feature).
	(daemonloop): moved socket creation to correctly show socket count
	(connect_process): do not count socket which is about to be closed
	(connect_process): write last output on PTY close
	(master_process): write all input on master socket close
	(daemonloop): do not terminate as long as there is data to write
	(main): stdin/stdout socket wrapper for proper operation

2007-09-21    <tino@firebird.03.softkill.net>

	* ptybuffer.c (do_check): resource leakage fixed: Option -c forgot
	to close the socket.

2007-09-18    <tino@firebird.03.softkill.net>

	* ptybufferconnect.c (ignore_fn): added, should work now as expected

2007-09-06    <tino@firebird.03.softkill.net>

	* script/autostart.sh: "start"-message now is send to STDERR too,
	so you can redirect STDOUT to /dev/null to suppress the "ok"
	messages to cron.

2007-08-29    <tino@firebird.03.softkill.net>

	* ptybufferconnect.c (out_fn): bugfix: Send to stdout, not stdin

	* ptybuffer.c (connect_process): found where the buggy lines from
	ptybuffer_new_fd must be put.  And fixed the bug in main where the
	wrong variable length (int instead of long) was passed to getopt
	(thus the variable was not initialized correctly).
	(main): option -k added and option -i implemented
	(connect_process): option -i and -k implemented
	(send_to_pty): added (code moved from connect_process)

	* TODO (BUGs): added
